--- a/Preludium Damnatio/Preludium Damnatio.vcxproj
+++ b/Preludium Damnatio/Preludium Damnatio.vcxproj
@@ -121,7 +121,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\Michael\Downloads\SDL2_ttf-devel-2.22.0-VC\SDL2_ttf-2.22.0\include;C:\Users\Michael\Downloads\SDL2_ttf-devel-2.22.0-VC\SDL2_ttf-2.22.0\include;C:\Users\Michael\Desktop\SDL2\SDL2-2.30.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Michael\source\repos\Preludium Damnatio\Preludium-Damnatio\x64\Release\assets\third party\SDL2_ttf-devel-2.22.0-VC\SDL2_ttf-2.22.0\include;C:\Users\Michael\source\repos\Preludium Damnatio\Preludium-Damnatio\x64\Release\assets\third party\SDL2\SDL2-2.30.8\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,7 +129,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Michael\Desktop\SDL2\SDL2-2.30.8\lib\x64;C:\Users\Michael\Downloads\SDL2_ttf-devel-2.22.0-VC\SDL2_ttf-2.22.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Michael\source\repos\Preludium Damnatio\Preludium-Damnatio\x64\Release\assets\third party\SDL2\SDL2-2.30.8\lib\x64;C:\Users\Michael\source\repos\Preludium Damnatio\Preludium-Damnatio\x64\Release\assets\third party\SDL2_ttf-devel-2.22.0-VC\SDL2_ttf-2.22.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
